--- a/Kori/GlobalLogin.razor.scss
+++ b/Kori/GlobalLogin.razor.scss
@@ -332,7 +332,8 @@
     @media only screen and (max-width: 1024px) {
         position: static;
         padding: 0;
-        z-index: auto;
+        z-index: 2000;
+        overflow: hidden;
 
         .kori-login__menu {
             header {
@@ -395,7 +396,7 @@
                 --indicator-width: 50%;
                 position: relative;
                 margin: 0 -16px;
-                margin-bottom: 24px;
+                margin-bottom: 16px;
                 display: flex;
                 justify-content: space-around;
                 border-bottom: 2px solid var(--gray-800, #1E1E1E);
@@ -418,7 +419,7 @@
                     height: 2px;
                     width: var(--indicator-width);
                     left: var(--indicator-offset);
-                    bottom: -1px;
+                    bottom: -2px;
                     background: #FFF;
                     transition: left 300ms, width 300ms;
                 }
@@ -454,6 +455,10 @@
 
         .kori-login__overlay {
             display: none;
+
+            &.show {
+                display: none;
+            }
         }
 
         .kori-login__text-primary,
@@ -465,6 +470,10 @@
 
     @media only screen and (max-width: 839px) {
         .kori-mobile {
+            #kori-login__tabs {
+                margin-bottom: 16px;
+            }
+
             .kori-login__menu-mobile, .kori-login__language {
                 padding: 44px;
             }
@@ -474,7 +483,7 @@
     @media only screen and (max-width: 550px) {
         .kori-mobile {
             .kori-login__menu-mobile, .kori-login__language {
-                padding: 0;
+                padding: 8px;
             }
         }
     }
