--- a/Kori/GlobalLogin.razor
+++ b/Kori/GlobalLogin.razor
@@ -355,10 +355,10 @@
         StateHasChanged();
     }
 
-    // protected override async Task OnAfterRenderAsync(bool firstRender)
-    // {
-    //     await Js.InvokeVoidAsync("initHyperScript");
-    // }
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        await Js.InvokeVoidAsync("initHyperScript");
+    }
 
     async Task LoginWithPasskey()
     {
