clean up project move login js to korilogin.razor.js

--- a/Kori/KoriContent.razor
+++ b/Kori/KoriContent.razor
@@ -3,8 +3,7 @@
         @ChildContent
     </section>
 
-@* <Kori.KoriLogin2 />
- *@<Kori.KoriWidget />
+<Kori.KoriWidget />
 
 @inject Kori Kori
 @inject NavigationManager Nav
