Update KoriContent namespace, update Program.cs to Blossom, remove hyperscript reference

--- a/SparcFeatures/Shared/MarketingLayout.razor
+++ b/SparcFeatures/Shared/MarketingLayout.razor
@@ -1,10 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
-<Sparc.Kori.KoriContent>
+<Sparc.Kori.Content.KoriContent>
     <div class="page">
         <NavMenu />
         <main class="landing">
             @Body
         </main>
     </div>
-</Sparc.Kori.KoriContent>
+</Sparc.Kori.Content.KoriContent>
