--- a/SparcFeatures/Shared/MainLayout.razor
+++ b/SparcFeatures/Shared/MainLayout.razor
@@ -1,10 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
-<Sparc.Kori.KoriContent>
+<Sparc.Kori.Content.KoriContent>
     <div class="page">
         <NavMenu />
         <main>
             @Body
         </main>
     </div>
-</Sparc.Kori.KoriContent>
+</Sparc.Kori.Content.KoriContent>
