gradient background, IdeaCard, update Nav and hover/active effects

--- a/Sparc2/Sparc2/Index.razor
+++ b/Sparc2/Sparc2/Index.razor
@@ -4,9 +4,7 @@
 
 <section>
     <div>
-        <h1>Striving for a world where startups are owned by those who built it <button><ArrowRight /></button></h1>        
+        <h1>Striving for a world where startups are owned by those who built it <button><ArrowRightIcon /></button></h1>        
     </div>
-    <Mosiac />
+    <Mosaic />
 </section>
-
-
