--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -19,9 +19,9 @@
                 <input type="text" placeholder="Search..." class="input-text" />
             </div>
             <div class="right">
-                <button>Explore</button>
-                <button>Filter</button>
-                <button>Add</button>
+                <button><ExploreIcon /> <span>Explore</span></button>
+                <button><FilterIcon /> <span>Filter</span></button>
+                <button class="add-btn"><AddIcon /> <span>Add</span></button>
             </div>
         }
     </div>
