--- a/Sparc2/Sparc2/_Imports.razor
+++ b/Sparc2/Sparc2/_Imports.razor
@@ -9,6 +9,8 @@
 @using Sparc2
 @using Sparc2.Shared
 @using Sparc2.Shared.Icons
+@using Sparc2.Donations
 @using Sparc2.Files
+@using Sparc2.Ideas
 
 @inject NavigationManager Nav
