--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -1,6 +1,6 @@
 ﻿nav {
   padding: 8px 16px;
-  /*position: fixed;*/
+  position: relative;
   z-index: 1000;
   margin: 2rem 6.3rem;
 }
@@ -25,16 +25,18 @@ nav .center .input-text {
 }
 nav .right {
   display: flex;
-  gap: 4px;
+  gap: 8px;
 }
-nav .right button, nav .left button {
-  background-color: transparent;
-  color: #2B1C45;
-  border: none;
-  cursor: pointer;
-  font-size: 14px;
-  font-weight: bold;
+nav button {
   padding: 8px 16px;
+  background: transparent;
+  border: 1px solid transparent;
+  border-radius: 20px;
+  color: #2B1C45;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: 0.3s all ease-in-out;
 }
 
 .other-nav {
@@ -44,7 +46,31 @@ nav .right button, nav .left button {
   backdrop-filter: blur(100px);
   -webkit-backdrop-filter: blur(100px);
 }
-.other-nav .left button,
-.other-nav .right button {
-  color: #FFFCF6;
+.other-nav button {
+  color: var(--yellow-50);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 4px;
+}
+.other-nav button:hover {
+  border: 1px solid var(--yellow-50);
+}
+.other-nav button:active {
+  background: rgba(255, 252, 246, 0.1);
+}
+.other-nav button.add-btn {
+  background: var(--yellow-50);
+  border-radius: 20px;
+  transition: 0.2s all ease-in-out;
+}
+.other-nav button.add-btn span {
+  color: var(--purple-800);
+}
+.other-nav button.add-btn:hover {
+  border: 1px solid transparent;
+  background: rgba(255, 252, 246, 0.8);
+}
+.other-nav button.add-btn:active {
+  transform: translatey(1px) scale(99%);
 }
