--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -1,13 +1,13 @@
 ﻿nav {
     padding: 8px 16px;
-    /*position: fixed;*/
+    position: relative;
     z-index: 1000;
     margin: 2rem 6.3rem;
 
     .container {
         display: flex;
         justify-content: space-between;
-        align-items: center;       
+        align-items: center;
     }
 
     .center {
@@ -28,19 +28,19 @@
 
     .right {
         display: flex;
-        gap: 4px;
+        gap: 8px;
     }
 
-    .right, .left {
-        button {
-            background-color: transparent;
-            color: #2B1C45;
-            border: none;
-            cursor: pointer;
-            font-size: 14px;
-            font-weight: bold;
-            padding: 8px 16px;
-        }
+    button {
+        padding: 8px 16px;
+        background: transparent;
+        border: 1px solid transparent;
+        border-radius: 20px;
+        color: #2B1C45;
+        font-size: 14px;
+        font-weight: 500;
+        cursor: pointer;
+        transition: .3s all ease-in-out;
     }
 }
 
@@ -51,8 +51,38 @@
     backdrop-filter: blur(100px);
     -webkit-backdrop-filter: blur(100px);
 
-    .left button,
-    .right button {
-        color: #FFFCF6;
+    button {
+        color: var(--yellow-50);
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 4px;
+
+        &:hover {
+            border: 1px solid var(--yellow-50);
+        }
+
+        &:active {
+            background: rgba(255, 252, 246, 0.1);
+        }
+
+        &.add-btn {
+            background: var(--yellow-50);
+            border-radius: 20px;
+            transition: 0.2s all ease-in-out;
+
+            span {
+                color: var(--purple-800);
+            }
+
+            &:hover {
+                border: 1px solid transparent;
+                background: rgba(255, 252, 246, 0.8);
+            }
+
+            &:active {
+                transform: translatey(1px) scale(99%);
+            }
+        }
     }
 }
