--- a/Sparc2/Sparc2/wwwroot/css/app.css
+++ b/Sparc2/Sparc2/wwwroot/css/app.css
@@ -35,3 +35,45 @@
   --orange-800: #6B2908;
   --orange-900: #3F1805;
 }
+
+html, body {
+  font-size: 62.5%;
+  font-family: Arial, sans-serif;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6, h7 {
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+input, select, textarea {
+  font-family: Arial, sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: var(--gray-600, #6B6B6B);
+}
+
+button {
+  padding: 0;
+  border: none;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+ul li {
+  padding: 0;
+  margin: 0;
+}
