--- a/Sparc2/Sparc2/Html.razor.scss
+++ b/Sparc2/Sparc2/Html.razor.scss
@@ -2,7 +2,7 @@
 
 html, body {
     font-size: 62.5%;
-    font-family: Arial, sans-serif;
+    font-family: Helvetica, sans-serif;
     margin: 0;
 }
 
@@ -17,7 +17,7 @@ p {
 }
 
 input, select, textarea {
-    font-family: Arial, sans-serif;
+    font-family: Helvetica, sans-serif;
 }
 
 a {
