--- a/Sparc2/Sparc2/wwwroot/css/app.css
+++ b/Sparc2/Sparc2/wwwroot/css/app.css
@@ -38,7 +38,7 @@
 
 html, body {
   font-size: 62.5%;
-  font-family: Arial, sans-serif;
+  font-family: Helvetica, sans-serif;
   margin: 0;
 }
 
@@ -53,7 +53,7 @@ p {
 }
 
 input, select, textarea {
-  font-family: Arial, sans-serif;
+  font-family: Helvetica, sans-serif;
 }
 
 a {
