--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor
@@ -5,7 +5,7 @@
         <img src="images/user-stock.png" />
         <div>
             <h3>@Idea.Author</h3>
-            <p>@Idea.DateCreated</p>
+            <p>@Idea.DateCreated.ToShortDateString()</p>
         </div>
     </header>
     <section>
