--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor.css
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor.css
@@ -14,6 +14,10 @@
   gap: 12px;
   margin-bottom: 16px;
 }
+.card header img {
+  width: 32px;
+  height: 32px;
+}
 .card header div {
   display: flex;
   flex-direction: column;
@@ -41,8 +45,9 @@
   gap: 16px;
 }
 .card section h2 {
+  color: var(--gray-900);
   font-size: 2.133rem;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 110%;
   letter-spacing: -0.427px;
 }
@@ -73,9 +78,10 @@
   background: none;
   border-radius: 20px;
   border: 1px solid var(--gray-100);
+  color: var(--gray-600);
   font-size: 16px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 120%;
   letter-spacing: -0.16px;
   cursor: pointer;
