ideacard image gallery/carousel

--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -15,5 +15,6 @@
     <Sparc.Blossom.BlossomApp DefaultLayout="MainLayout" Program="Program" @rendermode="new InteractiveServerRenderMode(false)" />
 
     <script src="_framework/blazor.web.js"></script>
+    <script src="js/dragging.js"></script>
 </body>
 </html>
