--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor.css
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor.css
@@ -51,11 +51,87 @@
   line-height: 110%;
   letter-spacing: -0.427px;
 }
+.card section .files {
+  position: relative;
+}
+.card section .files .images {
+  display: flex;
+  flex-direction: row;
+  overflow-x: hidden;
+  width: 100%;
+  height: fit-content;
+}
+.card section .files .images img {
+  display: none;
+  width: 100%;
+}
+.card section .files .images img.active {
+  display: block;
+}
+.card section .files:hover .arrows {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: fadeIn 0.3s ease-in-out;
+}
+.card section .files:hover .arrows button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 2px;
+  background: rgba(218, 190, 250, 0.5);
+  cursor: pointer;
+}
+.card section .files:hover .arrows button ::deep svg {
+  width: 20px;
+}
+.card section .files:hover .arrows button ::deep svg path {
+  stroke: var(--purple-50);
+}
+.card section .files:hover .arrows button.arrow-left {
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+.card section .files:hover .arrows button.arrow-right {
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+.card section .files:hover .arrows button.arrow-right ::deep svg {
+  transform: rotate(180deg);
+}
 .card section div:last-of-type p {
   color: var(--gray-900);
   font-size: 1.4rem;
   font-weight: 450;
   line-height: 120%;
+}
+.card section .arrows {
+  display: none;
+}
+.card section .indicators {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  width: 100%;
+  margin-top: 2px;
+}
+.card section .indicators .indicator {
+  background: var(--purple-200);
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+}
+.card section .indicators .indicator.active {
+  background: var(--purple-800);
 }
 .card footer {
   display: flex;
@@ -85,4 +161,17 @@
   line-height: 120%;
   letter-spacing: -0.16px;
   cursor: pointer;
+  transition: 0.2s all ease-in-out;
+}
+.card footer button:hover {
+  border: 1px solid var(--gray-800);
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
