--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor.scss
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor.scss
@@ -57,12 +57,105 @@
             letter-spacing: -0.427px;
         }
 
+        .files {
+            position: relative;
+
+            .images {
+                display: flex;
+                flex-direction: row;
+                overflow-x: hidden;
+                width: 100%;
+                height: fit-content;
+
+                img {
+                    display: none;
+                    width: 100%;
+
+                    &.active {
+                        display: block;
+                    } 
+                }
+            }
+
+            &:hover {
+                .arrows {
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    animation: fadeIn .3s ease-in-out;
+
+                    button {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        padding: 12px 2px;
+                        background: rgb(218, 190, 250, 0.5);
+                        cursor: pointer;
+
+                        ::deep svg {
+                            width: 20px;
+
+                            path {
+                                stroke: var(--purple-50);
+                            }
+                        }
+
+                        &.arrow-left {
+                            border-top-right-radius: 20px;
+                            border-bottom-right-radius: 20px;
+                        }
+
+                        &.arrow-right {
+                            border-top-left-radius: 20px;
+                            border-bottom-left-radius: 20px;
+
+                            ::deep svg {
+                                transform: rotate(180deg);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
         div:last-of-type {
             p {
                 color: var(--gray-900);
                 font-size: 1.4rem;
                 font-weight: 450;
                 line-height: 120%;
+            }
+        }
+
+        .arrows {
+            display: none;
+        }
+
+        .indicators {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 4px;
+            width: 100%;
+            margin-top: 2px;
+
+            .indicator {
+                background: var(--purple-200);
+                width: 5px;
+                height: 5px;
+                border-radius: 50%;
+
+                &.active {
+                    background: var(--purple-800);
+                }
             }
         }
     }
@@ -96,6 +189,21 @@
             line-height: 120%;
             letter-spacing: -0.16px;
             cursor: pointer;
+            transition: .2s all ease-in-out;
+
+            &:hover {
+                border: 1px solid var(--gray-800);
+            }
         }
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
     }
 }
