--- a/Sparc2/Sparc2/Html.razor.scss
+++ b/Sparc2/Sparc2/Html.razor.scss
@@ -4,6 +4,10 @@ html, body {
     font-size: 62.5%;
     font-family: Helvetica, sans-serif;
     margin: 0;
+
+    ::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 h1, h2, h3, h4, h5, h6, h7 {
