--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -2,7 +2,7 @@
   padding: 8px 16px;
   position: relative;
   z-index: 1000;
-  margin: 2rem 6.3rem;
+  margin: 32px 60px;
 }
 nav .container {
   display: flex;
@@ -14,14 +14,19 @@ nav .center {
   justify-content: center;
   flex-grow: 1;
 }
-nav .center .input-text {
-  background: transparent;
+nav .center input {
   width: 80%;
+  margin-left: 10px;
   padding: 10px;
+  background: transparent;
   border-radius: 4px;
   border: none;
+  color: var(--yellow-50);
   font-size: 14px;
-  margin-left: 10px;
+}
+nav .center input::placeholder {
+  color: var(--yellow-50);
+  opacity: 0.6;
 }
 nav .right {
   display: flex;
@@ -32,7 +37,7 @@ nav button {
   background: transparent;
   border: 1px solid transparent;
   border-radius: 20px;
-  color: #2B1C45;
+  color: var(--yellow-50);
   font-size: 14px;
   font-weight: 500;
   cursor: pointer;
@@ -40,6 +45,8 @@ nav button {
 }
 
 .other-nav {
+  position: fixed;
+  width: calc(100vw - 158px);
   border-radius: 12px;
   background: rgba(26, 12, 50, 0.26);
   box-shadow: 4px 4px 16px 0px rgba(63, 24, 5, 0.15);
