--- a/Sparc2/Sparc2/wwwroot/css/app.css
+++ b/Sparc2/Sparc2/wwwroot/css/app.css
@@ -41,6 +41,9 @@ html, body {
   font-family: Helvetica, sans-serif;
   margin: 0;
 }
+html ::-webkit-scrollbar, body ::-webkit-scrollbar {
+  display: none;
+}
 
 h1, h2, h3, h4, h5, h6, h7 {
   margin: 0;
