draggable page feature working, does not reset with subsequent click/drag

--- a/Sparc2/Sparc2/Shared/PageLayout.razor
+++ b/Sparc2/Sparc2/Shared/PageLayout.razor
@@ -8,3 +8,7 @@
 
 <div class="background"></div>
 <div class="background-noise"></div>
+
+<script>
+    document.body.id = 'draggable-content';
+</script>
