--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -37,7 +37,7 @@ nav button {
   background: transparent;
   border: 1px solid transparent;
   border-radius: 20px;
-  color: var(--yellow-50);
+  color: var(--purple-800);
   font-size: 14px;
   font-weight: 500;
   cursor: pointer;
