--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -42,7 +42,7 @@
         background: transparent;
         border: 1px solid transparent;
         border-radius: 20px;
-        color: var(--yellow-50);
+        color: var(--purple-800);
         font-size: 14px;
         font-weight: 500;
         cursor: pointer;
