dragging enabled when clicking the background and not child components; updated background to move when dragged

--- a/Sparc2/Sparc2/Shared/PageLayout.razor.css
+++ b/Sparc2/Sparc2/Shared/PageLayout.razor.css
@@ -13,20 +13,27 @@ main {
 }
 
 .background {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
+  width: 200vw;
+  height: 200vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.background-image {
+  width: 100%;
+  height: 100%;
+  position: absolute;
   top: 0;
   left: 0;
   background: url("/images/background.png");
   background-size: cover;
   z-index: 1;
 }
-
 .background-noise {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
+  width: 100%;
+  height: 100%;
+  position: absolute;
   top: 0;
   left: 0;
   background: url("/images/background-noise.png") repeat;
