--- a/Sparc2/Sparc2/Shared/PageLayout.razor
+++ b/Sparc2/Sparc2/Shared/PageLayout.razor
@@ -6,9 +6,7 @@
     @Body
 </main>
 
-<div class="background"></div>
-<div class="background-noise"></div>
-
-<script>
-    document.body.id = 'draggable-content';
-</script>
+<div id="background" class="background">
+    <div class="background-image"></div>
+    <div class="background-noise"></div>
+</div>
