--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor.css
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor.css
@@ -164,7 +164,10 @@
   transition: 0.2s all ease-in-out;
 }
 .card footer button:hover {
-  border: 1px solid var(--gray-800);
+  border: 1px solid var(--purple-800);
+}
+.card footer button:active {
+  border: 1px solid var(--gray-100);
 }
 
 @keyframes fadeIn {
