--- a/Sparc2/Sparc2/Index.razor.scss
+++ b/Sparc2/Sparc2/Index.razor.scss
@@ -18,7 +18,7 @@
             button {
                 background: none;
                 cursor: pointer;
-                border: none;
+                border: 1px solid transparent;
             }
         }
     }
