--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -20,7 +20,7 @@ nav .center input {
   padding: 10px;
   background: transparent;
   border-radius: 4px;
-  border: none;
+  border: 1px solid transparent;
   color: var(--yellow-50);
   font-size: 14px;
 }
