--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -21,7 +21,7 @@
             padding: 10px;
             background: transparent;
             border-radius: 4px;
-            border: none;
+            border: 1px solid transparent;
             color: var(--yellow-50);
             font-size: 14px;
 
