installed gsap and starting code in scrolling.js -- scroll behavior is currently wonky

--- a/Sparc2/Sparc2/Index.razor
+++ b/Sparc2/Sparc2/Index.razor
@@ -2,9 +2,11 @@
 
 <PageTitle>Sparc</PageTitle>
 
-<section>
+<section class="home">
     <div>
         <h1>Striving for a world where startups are owned by those who built it <button><ArrowRightIcon /></button></h1>        
     </div>
-    <Mosaic />
+    <div class="mosaic-container">
+        <img src="images/LogoMosaic.png" class="mosaic" />
+    </div>
 </section>
