--- a/Sparc2/Sparc2/wwwroot/css/app.css
+++ b/Sparc2/Sparc2/wwwroot/css/app.css
@@ -3,6 +3,7 @@
   --black: #000000;
   --gray-100: #E6E6E6;
   --gray-600: #6B6B6B;
+  --gray-700: #525252;
   --gray-900: ##1F1F1F;
   --yellow-50: #FFFCF6;
   --yellow-100: #FFF8EB;
