--- a/Sparc2/Sparc2/_Imports.razor
+++ b/Sparc2/Sparc2/_Imports.razor
@@ -10,6 +10,7 @@
 @using Sparc2
 @using Sparc2.Shared
 @using Sparc2.Shared.Icons
+@using Sparc2.Shared.Components
 @using Sparc2.Donations
 @using Sparc2.Files
 @using Sparc2.Ideas
