--- a/Sparc2/Sparc2/_variables.scss
+++ b/Sparc2/Sparc2/_variables.scss
@@ -1,6 +1,7 @@
 :root {
     --white: #FFFFFF;
     --black: #000000;
+    --red: #FF4D4D;
     --gray-100: #E6E6E6;
     --gray-600: #6B6B6B;
     --gray-700: #525252;
