--- a/Sparc2/Sparc2/Shared/Components/AddCard.razor.scss
+++ b/Sparc2/Sparc2/Shared/Components/AddCard.razor.scss
@@ -1,10 +1,20 @@
-.card {
+﻿.add-card {
     width: 332px;
     height: fit-content;
     padding: 24px;
     border-radius: 16px;
     background: var(--yellow-50);
     box-shadow: 4px 4px 16px 0px rgba(63, 24, 5, 0.25);
+
+    .progress-bar {
+        height: 2px;
+        background: var(--purple-100);
+
+        .progress {
+            height: 2px;
+            background: var(--purple-800);
+        }
+    }
 
     header {
         display: flex;
@@ -25,76 +35,20 @@
             border: 1px solid transparent;
             border-radius: 15px;
             color: var(--gray-700);
+            font-weight: 600;
+        }
 
-            &:active {
-                box-shadow: 0px 0px 8px 0px rgba(178, 116, 250, 0.25);
-                color: var(--purple-800);
-            }
+        .active {
+            box-shadow: 0px 0px 8px 0px rgba(178, 116, 250, 0.25);
+            color: var(--purple-800);
         }
     }
 
     section {
         display: flex;
         flex-direction: column;
-        gap: 16px;
-        margin-top: 24px;
-
-        div:first-child {
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-            margin-bottom: 24px;
-
-            h2 {
-                color: var(--gray-900);
-                font-size: 2.133rem;
-                font-weight: 600;
-                line-height: 110%;
-                letter-spacing: -0.427px;
-            }
-
-            p {
-                color: var(--gray-600);
-                font-size: 1.4rem;
-                font-weight: 450;
-                line-height: 120%;
-            }
-        }
-
-        ::deep form {
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
-
-            label {
-                display: flex;
-                flex-direction: column;
-                gap: 8px;
-
-                span {
-                    font-size: 1.2rem;
-                    font-weight: 600;
-                    line-height: 120%;
-                    letter-spacing: -0.12px;
-                }
-
-                input, textarea {
-                    border-radius: 16px;
-                    border: 1px solid var(--gray-100);
-                }
-
-                input {
-                    padding: 8px 16px;
-                    height: 22px;
-                }
-
-                textarea {
-                    padding: 16px;
-                    height: 166px;
-                    resize: none;
-                }
-            }
-        }
+        gap: 24px;
+        margin-top: 24px;        
     }
 
     footer {
@@ -141,15 +95,5 @@
                 }
             }
         }
-    }
-}
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
     }
 }
