--- a/Sparc2/Sparc2/Shared/Components/AddCard.razor
+++ b/Sparc2/Sparc2/Shared/Components/AddCard.razor
@@ -1,16 +1,16 @@
 ﻿<div class="add-card">
     <header>
-        <button class="@GetHeaderButtonClass(0)" @onclick="() => OnHeaderButtonClick(0)">
+        <button class="@GetButtonClass(0)" @onclick="() => SelectHeaderButton(0)">
             <LightbulbIcon /> <span>Share</span>
         </button>
 
-        <button class="@GetHeaderButtonClass(1)" @onclick="() => OnHeaderButtonClick(1)">
+        <button class="@GetButtonClass(1)" @onclick="() => SelectHeaderButton(1)">
             <DollarIcon /> <span>Donate</span>
         </button>
     </header>
 
     <div class="progress-bar">
-        <div class="progress" style="width: @(StepProgress + "%")"></div>
+        <div class="progress" style="width: @(StepProgress + "%");"></div>
     </div>
 
     <section>
@@ -32,19 +32,21 @@
 
 
 @code {
-    private int CurrentStep = 0;
-    private int SelectedHeaderButton = 0; // 0 = Share, 1 = Donate
+    private int CurrentStep;
+    private int SelectedHeaderButton; // 0 = Share, 1 = Donate
     private int StepProgress => CurrentStep == 0 ? 50 : 100;
+
     [Parameter] public EventCallback<bool> OnClose { get; set; }
 
+    private string GetButtonClass(int index) => index == SelectedHeaderButton ? "active" : "";
 
     private string BackOrCancelLabel => CurrentStep == 0 ? "Cancel" : "Back";
     private string NextOrSubmitLabel => CurrentStep == 0 ? "Next" : (SelectedHeaderButton == 0 ? "Upload" : "Donate");
 
-    private void OnHeaderButtonClick(int buttonIndex)
+    private void SelectHeaderButton(int index)
     {
-        SelectedHeaderButton = buttonIndex;
-        CurrentStep = 0; 
+        SelectedHeaderButton = index;
+        CurrentStep = 0;
     }
 
     private async Task OnNextOrSubmit()
@@ -60,6 +62,18 @@
         }
     }
 
+    private async Task OnBackOrCancel()
+    {
+        if (CurrentStep == 0)
+        {
+            await OnClose.InvokeAsync(true);
+        }
+        else
+        {
+            CurrentStep = 0;
+        }
+    }
+
     private Task SubmitIdea()
     {
         return Task.CompletedTask;
@@ -68,19 +82,5 @@
     private Task SubmitDonation()
     {
         return Task.CompletedTask;
-    }
-
-    private async Task OnBackOrCancel()
-    {
-        if (CurrentStep == 0)
-        {
-            await OnClose.InvokeAsync(true); 
-        }
-        else
-        {
-            CurrentStep = 0;
-        }
-    }
-
-    private string GetHeaderButtonClass(int buttonIndex) => buttonIndex == SelectedHeaderButton ? "active" : "";
+    }    
 }
