--- a/Sparc2/Sparc2/Shared/Components/AddCard.razor.css
+++ b/Sparc2/Sparc2/Shared/Components/AddCard.razor.css
@@ -1,32 +1,26 @@
 ﻿.add-card {
   width: 332px;
-  height: fit-content;
   padding: 24px;
   border-radius: 16px;
   background: var(--yellow-50);
-  box-shadow: 4px 4px 16px 0px rgba(63, 24, 5, 0.25);
+  box-shadow: 4px 4px 16px rgba(63, 24, 5, 0.25);
 }
 .add-card .progress-bar {
   height: 2px;
   background: var(--purple-100);
 }
 .add-card .progress-bar .progress {
-  height: 2px;
+  height: 100%;
   background: var(--purple-800);
 }
 .add-card header {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
   gap: 5px;
   margin-bottom: 24px;
 }
 .add-card header button {
-  background: transparent;
-  cursor: pointer;
   height: 32px;
-  padding: 3px 12px 3px 10px;
+  padding: 3px 12px;
   display: flex;
   gap: 4px;
   align-items: center;
@@ -34,9 +28,11 @@
   border-radius: 15px;
   color: var(--gray-700);
   font-weight: 600;
+  background: transparent;
+  cursor: pointer;
 }
-.add-card header .active {
-  box-shadow: 0px 0px 8px 0px rgba(178, 116, 250, 0.25);
+.add-card header button.active {
+  box-shadow: 0 0 8px rgba(178, 116, 250, 0.25);
   color: var(--purple-800);
 }
 .add-card section {
@@ -47,35 +43,31 @@
 }
 .add-card footer {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   margin-top: 24px;
 }
 .add-card footer button {
-  display: flex;
   height: 40px;
   padding: 10px 20px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  background: none;
   border-radius: 20px;
-  border: 1px solid transparent;
   font-size: 16px;
-  font-style: normal;
   font-weight: 600;
-  line-height: 120%;
-  letter-spacing: -0.16px;
   cursor: pointer;
   transition: 0.2s all ease-in-out;
+  border: 1px solid transparent;
+  background: none;
 }
 .add-card footer button:active {
-  border: 1px solid var(--gray-100);
+  border-color: var(--gray-100);
 }
 .add-card footer button:first-of-type {
   color: var(--purple-800);
 }
 .add-card footer button:first-of-type:hover {
-  border: 1px solid var(--purple-800);
+  border-color: var(--purple-800);
 }
 .add-card footer button:last-of-type {
   color: var(--yellow-50);
