--- a/Sparc2/Sparc2/_Imports.razor
+++ b/Sparc2/Sparc2/_Imports.razor
@@ -16,6 +16,7 @@
 @using Sparc2.Ideas
 @using Sparc.Blossom.Api
 @using Idea = Sparc.Blossom.Api.ProjectIdea
+@using File = Sparc.Blossom.Api.FileUpload
 
 @inject NavigationManager Nav
 @inject BlossomApi Api
